5.1.7 -> 5.1.8:
    - jbj: rpmds: fix: avoid pooling rpmdsThis/rpmdsSingle for now ...
    - jbj: headerReload: fix: don't free the header blob.
    - jbj: yarn: convert rpmte to a usage mutex (no refcounts).
    - jbj: yarn: convert rpmgi refcount to usage mutex.
    - jbj: yarn: use the pool changes where possible.
    - jbj: yarn: add generic Link/Unlink refcount diddlers.
    - jbj: yarn: add debugging, reuse counter, and zlog to rpmioPool.
    - jbj: yarn: trick up a __FILE__:__LINE__ from caller when failing too.
    - jbj: yarn: use EINVAL, not -1, for --without-pthreads portability.
    - jbj: yarn: glibc pthreads (at least) returns errno's, strrerror decodes.
    - jbj: yarn: fix: assert fail instead of exit on error.
    - jbj: yarn: use the pool allocator.
    - jbj: yarn: add a pool allocator.
    - jbj: yarn: convert rpmfi refcounts to usage mutexes.
    - jbj: yarn: convert rpmds refcounts to usage mutexes.
    - jbj: yarn: convert Header refcounts to usage mutexes.
    - jbj: yarn: convert urlInfo refcounts to usage mutexes.
    - jbj: yarn: convert FD_t refcounts to usage mutexes.
    - jbj: zlog: backport from HEAD.
    - jbj: yarn: backport from HEAD (likely --with-pthreads needed todo++).
    - jbj: bzdio: handle multiblock compressed payloads transparently.
    - jbj: xzdio: backport the remaining xzdio contexxtual changes. worksforme.
    - jbj: xzdio: backport XZ changes from HEAD.
    - jbj: rename lzdio.c -> xzdio.c.

5.1.6 -> 5.1.7:
    - jbj: update po files (Translation Project).
    - jbj: eleminate duplicate rpmVersionCompare() routines.
    - afb: backport macosx ldflags fixes.
    - glen: markLinkedFailed if rpm file reopen failed during transaction to avoid losing old pkg info from db
    - jbj: add rpmdsNSType() to -lrpm loader map.
    - jbj: update po files (Translation Project).
    - jbj: update PO and doxygen manifests.
    - jbj: include rpmgrep.1 with "make dist".
    - rpm.org: Don't try to create "" directories.