@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: yarn: convert rpmps refcount to usage mutex.
     - jbj: rpmds: fix: avoid pooling rpmdsThis/rpmdsSingle for now ...
     - jbj: headerReload: fix: don't free the header blob.
     - jbj: yarn: convert rpmte to a usage mutex (no refcounts).
